# Colabb

./: .gitignore  Bitacora.md  INSTALL.sh  README.md  agents.md  estructura.txt  requirements.txt  skills.md
.github/workflows/: build.yml  ci.yml
ai/: predictor.py
bash/: executor.py
colabb-cpp/: .gitignore  CMakeLists.txt  README.md
colabb-cpp/docs/: ABI.md  SECURITY_DEPENDENCIES.md  agent.md  scalability_operation_plan.md  skills.md
colabb-cpp/docs/examples/: CMakeSnippet.txt  CMakeSnippet_extended.txt  skill_manifest.json  skill_skeleton.cpp  skill_skeleton_extended.cpp
colabb-cpp/include/colabb/: version.hpp
colabb-cpp/scripts/: package_deb.sh
colabb-cpp/snap/: snapcraft.yaml
colabb-cpp/src/: main.cpp
colabb-cpp/src/application/: prediction_service.cpp  prediction_service.hpp  suggestion_cache.cpp  suggestion_cache.hpp
colabb-cpp/src/domain/ai/: ai_provider.hpp  generic_http_provider.cpp  groq_provider.cpp  openai_provider.cpp
colabb-cpp/src/domain/models/: suggestion.hpp  terminal_profile.hpp
colabb-cpp/src/infrastructure/config/: config_manager.cpp  config_manager.hpp  profile_manager.cpp  profile_manager.hpp  settings_manager.cpp  settings_manager.hpp
colabb-cpp/src/infrastructure/context/: context_service.cpp  context_service.hpp
colabb-cpp/src/infrastructure/http/: http_client.cpp  http_client.hpp
colabb-cpp/src/infrastructure/i18n/: translation_manager.cpp  translation_manager.hpp
colabb-cpp/src/infrastructure/plugins/: plugin_loader.cpp  plugin_loader.hpp
colabb-cpp/src/infrastructure/terminal/: vte_terminal.cpp  vte_terminal.hpp
colabb-cpp/src/ui/: config_dialog.cpp  config_dialog.hpp  main_window.cpp  main_window.hpp  profile_dialog.cpp  profile_dialog.hpp  search_bar.cpp  search_bar.hpp  tab_manager.cpp  tab_manager.hpp
colabb-cpp/src/util/: sanitize.hpp
colabb-cpp/tests/: CMakeLists.txt  main_test.cpp
colabb-cpp/tests/integration/: plugin_loader_integration_test.cpp
colabb-cpp/tests/unit/: config_manager_test.cpp  context_service_test.cpp  prediction_service_queue_test.cpp  profile_manager_test.cpp  suggestion_cache_test.cpp  translation_manager_test.cpp
gui/: window.py
legacy-python/: README.md  ctypes_draft.py  diagnostic.py  main.py  probe_ctypes.py  probe_loading.py  probe_vte.py  test_clipboard.py
legacy-python/ai/: predictor.py
legacy-python/config/: config.json  config.py  key.key
legacy-python/gui/: window.py
resources/: style.css
